<resources>
    <string name="app_name">CountryInfo</string>

    <string name="cancel">Cancel</string>
    <string name="country_name">Name:</string>
    <string name="country_native_name">Native name</string>
    <string name="country_region">Region:</string>
    <string name="country_capital">Capital:</string>
    <string name="country_languages">Languages</string>
    <string name="country_translations">Translations:</string>

</resources>
